# python-template

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  pyproject.toml  rename_project.py  rename_project.sh
.devcontainer/: devcontainer.json
my_module/: main.py
tests/: context.py  test_main.py
